přidá menu do html souboru

--- a/01-index.html
+++ b/01-index.html
@@ -9,6 +9,16 @@
     <h1>Zoo</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid aut ducimus? At, voluptate! Soluta, amet consequatur facilis et est blanditiis ea vero, non hic libero eaque quasi magni autem!</p>
+
+    <nav>
+        <ul>
+            <li><a href="">Domu</a></li>
+            <li><a href="">Kontakt</a></li>
+            <li><a href="">Foto</a></li>
+            <li><a href="">Rezervace</a></li>
+            <li><a href="">Blog</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
