--- a/01-index.html
+++ b/01-index.html
@@ -9,6 +9,8 @@
     <h1>Zoo</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid aut ducimus? At, voluptate! Soluta, amet consequatur facilis et est blanditiis ea vero, non hic libero eaque quasi magni autem!</p>
+
+    <a href="https://google.com">Odkaz na google</a>
     
 </body>
 </html>
